# cfd-solver

./: .gitignore  ALGORITHM_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  FEATURES.md  GEMINI.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  TUTORIAL.md  VERIFICATION_REPORT.md  VIBES.md  VIDEO_TUTORIAL.md  pyproject.toml  pytest.ini
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/clyde/: PHILOSOPHY.md
.claude/skills/analyze/: SKILL.md  generate_graphs.py
.claude/skills/doc-parrot/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/simulate/: SKILL.md
.claude/skills/sweep/: SKILL.md
.claude/skills/ticket/: SKILL.md
.claude/skills/visualize/: SKILL.md  cylinder_helper.py
.claude/skills/workon/: SKILL.md
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/dem_packing/cases/: packing_200_particles.json
configs/lbm_dem/: README.md  membrane_pressure_periodic_smoke.json
configs/lbm_dem/cases/: cylinder_flow_single.json  dem_settling_200.json  fouling_3d_smoke.json  fouling_3d_sweep_20260609_PLAN.md  fouling_3d_sweep_20260609_a1_attr_0015.json  fouling_3d_sweep_20260609_a2_attr_0010.json  fouling_3d_sweep_20260609_a3_attr_0005.json  fouling_3d_sweep_20260609_b0_baseline.json  fouling_3d_sweep_20260609_c1_phi_010.json  fouling_3d_sweep_20260609_c2_phi_020.json  fouling_four_cylinder_supply.json  (+16 more)
docs/: CONTEXT.md  MEMBRANE_OPT_DESIGN.md  RESEARCH_ROADMAP.md  SWEEP_WEB_GUIDE.md  TOPOLOGY_OPTIMIZATION_FOULING_GUIDE.md  TOPOLOGY_OPTIMIZATION_PLAN.md  TUTORIAL.md  VIBES.md
docs/fouling_model/: ALGORITHMS.md  LBM_DEM_COUPLING_LIMITATIONS.md  NUMERICAL_WORKFLOW.md  PROCESS_FLOW.md  SYSTEM_ARCHITECTURE.md
examples/: debug_dem_forces.py  demo.py  demo_cavity_tutorial.py  demo_cylinder.py  demo_dem_100particles.py  demo_dem_100particles_short.py  demo_dem_50particles.py  demo_dem_settling.py  demo_improved_cavity.py  demo_shear_thinning.py  diagnose_cavity.py  make_animation_frames.py  particle_simulation.py  run_lbm_dem.py  verify_circular_poiseuille.py  verify_cylinder.py  verify_dem.py  verify_non_newtonian.py  verify_plane_poiseuille.py
paper/: draft.md
particulate_flow/plans/: issue-1-subpackage-split-findings.md  issue-1-subpackage-split.md  issue-2-runner-refactor-findings.md  issue-2-runner-refactor.md  issue-27-analytical-benchmarks-findings.md  issue-27-analytical-benchmarks.md  issue-3-bin-abolition-tools-configs-findings.md  issue-3-bin-abolition-tools-configs.md  issue-33-numba-le-correction-findings.md  issue-33-numba-le-correction.md  workflow_state.md
plans/: issue-14-3d-fouling-core-solver-findings.md  issue-14-3d-fouling-core-solver.md  issue-15-3d-config-runner-findings.md  issue-15-3d-config-runner.md  issue-16-simulate-3d-findings.md  issue-16-simulate-3d.md  issue-17-3d-ibm-coupling-findings.md  issue-17-3d-ibm-coupling.md  issue-18-3d-dem-contact-findings.md  issue-18-3d-dem-contact.md  issue-19-3d-cylinder-obstacles-findings.md  issue-19-3d-cylinder-obstacles.md  issue-20-3d-inlet-injection-findings.md  issue-20-3d-inlet-injection.md  issue-26-dem-decouple-findings.md  issue-26-dem-decouple.md  issue-31-le-shear-profile-findings.md  issue-31-le-shear-profile.md  issue-7-lees-edwards-bc-isp-coupling-findings.md  issue-7-lees-edwards-bc-isp-coupling.md  issue-8-surface-roughness-apparent-viscosity-findings.md  issue-8-surface-roughness-apparent-viscosity.md  issue-9-3d-solver-d3q15-lees-edwards-findings.md  issue-9-3d-solver-d3q15-lees-edwards.md  session-2026-05-28-simulate-skill-findings.md  session-2026-05-28-simulate-skill.md  workflow_state.md
src/cfd/: __init__.py  cavity.py  cylinder.py  non_newtonian.py  poiseuille.py  result_paths.py
src/cfd_dem_lbm/: __init__.py  cylinder_flow.py  dem_solver.py  fluid_verification.py  lbm_dem.py  simulation_config.py
src/cfd_lbm/: __init__.py  lbm.py  poiseuille.py
src/dem/: __init__.py  particles.py
src/demos/: demo_cavity_tutorial.py  demo_cylinder.py  demo_dem_100particles.py  demo_dem_100particles_short.py  demo_dem_50particles.py  demo_dem_settling.py  demo_improved_cavity.py  demo_shear_thinning.py  make_animation_frames.py  particle_simulation.py  run_lbm_dem.py
src/particulate_flow/: __init__.py  builder.py  cylinder_flow.py  dem_packing.py  fast_solver.py  fluid_verification.py  lbm3d.py  lbm_dem.py  rheology.py  runner3d.py  simulation_config.py
src/runners/: run_dem_packing.py  run_lbm_dem.py  run_lbm_dem_sweep.py  sweep_cli.py  sweep_web.py
src/tools/: benchmark_lbm_accelerators.py  benchmark_lbm_dem_coupling_backends.py  benchmark_numba_components.py  verify_lbm_dem_fluid.py
tests/: conftest.py  test_cfd.py  test_contact_law.py  test_cylinder_flow.py  test_dem.py  test_dem3d.py  test_dem_packing.py  test_geometry.py  test_integration.py  test_lbm.py  test_lbm3d.py  test_lbm3d_cylinder.py  test_lbm3d_ibm.py  test_lbm3d_inlet.py  test_lbm3d_pressure.py  test_lbm_dem.py  test_runner_3d.py  test_runner_refactor.py  test_simulate_skill_3d.py  test_simulation_config.py  test_structure_phase3.py  test_subpackage_imports.py  test_surface_roughness_viscosity.py  test_sweep_cli.py  test_sweep_web.py
tests/dem/: test_dem_forces.py  test_packing.py
tests/ibm/: test_ibm_coupling.py
tests/io/: test_config.py  test_cylinder_flow.py
tests/lbm/: test_lbm_solver.py  test_lees_edwards.py  test_verification.py
tests/verification/: README.md  analyze_particle_data.py  compare_historical_results.py  diagnose_cavity.py  floor_collision_check.py  verify_plane_poiseuille.py
(+53 files in other folders)
