[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cfd-solver"
version = "0.2.0"
description = "A robust Python library for Poiseuille and stabilized Cavity flow simulations."
readme = "README.md"
license = "MIT"
authors = [
    "hardwork9047 <tomatosimple1104@gmail.com>"
]
keywords = [
    "CFD",
    "Fluid Dynamics",
    "Navier-Stokes",
    "Poiseuille",
    "Lid-Driven Cavity",
    "Non-Newtonian",
    "Numerical Simulation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/hardwork9047/cfd-solver"
documentation = "https://github.com/hardwork9047/cfd-solver#readme"
repository = "https://github.com/hardwork9047/cfd-solver.git"
packages = [
    {include = "cfd", from = "src"},
    {include = "cfd_lbm", from = "src"},
    {include = "dem", from = "src"},
    {include = "cfd_dem_lbm", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=1.26.0"
matplotlib = ">=3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.1.0"
twine = ">=5.0.0"
black = ">=24.0.0"
ruff = ">=0.3.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I"]
