[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cfd-solver"
version = "0.12.0"
description = "Particulate-flow simulation toolkit with LBM-DEM coupling."
readme = "README.md"
license = "MIT"
authors = [
    "hardwork9047 <tomatosimple1104@gmail.com>"
]
keywords = [
    "CFD",
    "Fluid Dynamics",
    "Cylinder Flow",
    "Lattice-Boltzmann",
    "LBM",
    "Discrete Element Method",
    "DEM",
    "Membrane Fouling",
    "Particle-Laden Flow",
    "Particulate Flow",
    "Pore Flow",
    "Numerical Simulation",
    "Computational Physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]
homepage = "https://github.com/hardwork9047/cfd-solver"
documentation = "https://github.com/hardwork9047/cfd-solver#readme"
repository = "https://github.com/hardwork9047/cfd-solver.git"
packages = [
    {include = "particulate_flow", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=1.26.0"
matplotlib = ">=3.8.0"
numba = "^0.65.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.1.0"
twine = ">=5.0.0"
black = ">=24.0.0"
ruff = ">=0.3.0"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
extend-exclude = '''
(
  ^src/runners/
)
'''

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I"]
extend-exclude = [
    "src/runners",
    "src/tools",
]
